[WIP] chore: migrate to SQLite

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,6 @@
     "dbaeumer.vscode-eslint",
     "prisma.prisma",
     "mtxr.sqltools",
-    "mtxr.sqltools-driver-pg"
+    "mtxr.sqltools-driver-sqlite"
   ]
 }
