--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+DATABASE_URL="file:./data.db"
+# TURSO_DATABASE_URL="file:./data.db"
+# TURSO_AUTH_TOKEN=""
 
 # `openssl rand -base64 32`
 AUTH_SECRET=secret-token
