--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run docker:up && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,8 +11,6 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset && prisma db seed",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "setup": "npm run docker:up && sleep 3 && prisma migrate deploy && prisma generate && prisma db seed",
@@ -21,7 +19,9 @@
     "test:debug": "npx playwright test --debug"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@libsql/client": "^0.6.0",
+    "@prisma/adapter-libsql": "^5.12.1",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -57,7 +57,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.9.1",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5"
